# basil

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  TESTING.md  WORKSPACE  WORKSPACE.bazel
assets/: hello_world.txt
cargo/: crates.bzl
containers/: BUILD
containers/rusty_container/: BUILD.bazel
containers/simple_demo/: BUILD.bazel
src/: main.rs
utilities/: BUILD.bazel
utilities/src/: lib.rs
utils/: BUILD.bazel  LIBS.md  bazaar.bzl  tests.bzl
utils/greeter_lib/: BUILD.bazel
utils/greeter_lib/src/: lib.rs
utils/greeter_lib/tests/: greeting.rs
utils/reader_lib/: BUILD.bazel
utils/reader_lib/src/: lib.rs
