package(default_visibility = ["//visibility:public"])

licenses([
    "notice",  # See individual crates for specific licenses
])

# No targets defined

# Export file for Stardoc support
exports_files(
    [
        "//greeter_lib/BUILD.bazel",
        "//reader_lib/BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)