package(default_visibility = ["//visibility:public"])

# https://bazelbuild.github.io/rules_rust/defs.html#rust_test
load("@rules_rust//rust:rust.bzl", "rust_library", "rust_test")

rust_library(
    name = "greeter",
    edition = "2021",
    srcs = ["src/lib.rs"],
)

# To build the `greeting.rs` integration test, we add the `rust_test` target w/ `greeting.rs`
# in `srcs` and a dependency on the `greeter_lib` target
rust_test(
    name = "greeter_test",
    srcs = ["tests/greeting.rs"],
    # You may add other deps that are specific to the test configuration
    deps = [":greeter"]
)

# To run the test with `bazel build //utils/greeter_lib:greeter_test` 
# from WORKSPACE.bazel/root level
 