package(default_visibility = ["//visibility:public"])

# https://bazelbuild.github.io/rules_rust/defs.html#rust_test
load("@io_bazel_rules_rust//rust:rust.bzl", "rust_library", "rust_test")

rust_library(
    name = "reader_lib",
    edition = "2021",
    srcs = [
        "src/lib.rs",
    ],
)

# To run the test with `bazel build //utils:utils_lib_test` from WORKSPACE.bazel/root level
rust_test(
    name = "reader_test",
    crate = ":reader_lib",
    # You may add other deps that are specific to the test configuration
    deps = [":reader_lib"]
)

# 